--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-router-dom": "^6.22.3",
+    "antd": "^5.16.2",
+    "@headlessui/react": "^1.7.13"
   },
   "scripts": {
     "start": "react-scripts start",
