--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "antd": "^5.16.2",
     "@headlessui/react": "^1.7.13"
   },
+  "devDependencies": {
+    "@craco/craco": "^7.1.0",
+    "craco-less": "^3.0.1",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0"
+  },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npx craco start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
